add doc for Encryptor class

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,15 +5,15 @@ analyzer:
     - lib/generated_plugin_registrant.dart
     - test/helpers/test_helpers.mocks.dart
 
-#   plugins:
-#     custom_lint
+  plugins:
+    custom_lint
 
-# custom_lint:
-#   rules:
-#     - talawa_lint
+custom_lint:
+  rules:
+    - talawa_lint
 
-#   exclude:
-#     - test/
+  exclude:
+    - test/
 
 linter:
   rules:
