--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -95,7 +95,9 @@ jobs:
           flutter analyze
           dart analyze
           flutter pub global activate dartdoc
-          flutter pub global run dartdoc . --output talawa-mobile-docs --format md
+          flutter pub global run dartdoc . --output talawa-mobile-docs --format md --exclude=test/widget_tests/widgets/pinned_carousel_widget_test.dart, lib/widgets/pinned_carousel_widget.dart, lib/widgets/post_widget.dart, test/widget_tests/widgets/post_widget_test.dart
+          rm -rf talawa-mobile-docs/widgets_pinned_carousel_widget/CustomCarouselScrollerState/build.md
+          rm -rf talawa-mobile-docs/widgets_post_widget/PostContainerState/build.md
       - uses: actions/upload-artifact@v1
         with:
           name: talawa-mobile-docs
