Upgraded the flutter version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,7 @@ dependencies:
   vibration: ^1.8.1
   video_player: ^2.6.1
   visibility_detector: ^0.4.0+2
-
+  contained_tab_bar_view: ^0.8.0
 
 
 dev_dependencies:
