--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   http: ^0.13.6
   image_cropper: ^4.0.1
   image_picker: ^1.0.2
-  intl: ^0.17.0
+  intl: 0.18.1
   json_annotation: ^4.7.0
   mockito: ^5.3.2
   network_image_mock: ^2.1.1
