--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   image_picker: ^1.0.2
   intl: ^0.18.0
   json_annotation: ^4.7.0
+  googleapis: any
   mockito: ^5.3.2
   network_image_mock: ^2.1.1
   path_provider: ^2.1.0
