--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -34,7 +34,7 @@ jobs:
           java-version: '12.0'          
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.3'
+          flutter-version: '3.13.0'
           channel: 'stable' # or: 'beta', 'dev' or 'master'
       - name: Set default branch.
         run: git remote set-head origin --auto
@@ -58,6 +58,7 @@ jobs:
           git branch
           git checkout -b temp_branch
           git branch
+          git stash push -m lock_file pubspec.lock
           git checkout develop
           git pull
           git branch
@@ -106,7 +107,7 @@ jobs:
           java-version: '12.0'          
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.3'
+          flutter-version: '3.13.0'
           channel: 'stable' # or: 'beta', 'dev' or 'master'
       - name: Running pub get to fetch dependencies
         run: flutter pub get
@@ -136,7 +137,7 @@ jobs:
           java-version: '12.0'          
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.3'
+          flutter-version: '3.13.0'
           channel: 'stable' # or: 'beta', 'dev' or 'master'
       - name: Running pub get to fetch dependencies
         run: flutter pub get
@@ -151,7 +152,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.3'
+          flutter-version: '3.13.0'
           channel: 'stable' # or: 'beta', 'dev' or 'master'
           architecture: x64
       - name: Building for ios
