--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,14 @@ description: Welcome to the Talawa Project for the Palisadoes Foundation
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
+
 version: 1.0.0+1
 
 homepage: https://github.com/PalisadoesFoundation/talawa
 
 repository: https://github.com/PalisadoesFoundation/talawa
-
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.12.0 <3.13.0"
 
 dependencies:
   ############# Remove ###########
@@ -19,27 +19,28 @@ dependencies:
   # analyzer:
   # analyzer_plugin:
   ################################
-  
+
   auto_size_text: ^3.0.0
   cached_network_image: ^3.1.0
   connectivity_plus: ^4.0.2
-  cupertino_icons: ^1.0.6
-  currency_picker: ^2.0.17
+  contained_tab_bar_view: ^0.8.0
+
+  cupertino_icons: ^1.0.3
+  currency_picker: ^2.0.16
 
   ############## Remove ##########
+
   # custom_lint_builder: ^0.4.0
   ################################
-  
   file: ^6.1.4
+
   firebase_core: ^2.16.0
   firebase_core_platform_interface: ^4.5.3
 
   firebase_messaging: ^14.6.8
   firebase_messaging_platform_interface: ^4.5.7
-
   flutter:
     sdk: flutter
-
   flutter_braintree: ^3.0.0
   flutter_cache_manager: ^3.3.1
   flutter_local_notifications: ^15.1.1
@@ -47,7 +48,7 @@ dependencies:
     sdk: flutter
   flutter_speed_dial: ^7.0.0
   flutter_svg: ^2.0.5
-  font_awesome_flutter: ^10.4.0 
+  font_awesome_flutter: ^10.4.0
   geocoding: ^2.1.0
   geolocator: ^10.0.1
   get_it: ^7.5.0
@@ -56,8 +57,9 @@ dependencies:
   hive: ^2.2.3
   http: ^0.13.6
   image_cropper: ^4.0.1
+
+  intl: ^0.18.0
   image_picker: ^1.0.4
-  intl: ^0.17.0
   json_annotation: ^4.7.0
   mockito: ^5.3.2
   network_image_mock: ^2.1.1
@@ -81,7 +83,6 @@ dependencies:
   visibility_detector: ^0.4.0+2
 
 
-
 dev_dependencies:
   build_runner: ^2.3.3
   custom_lint:
@@ -90,7 +91,7 @@ dev_dependencies:
   hive_generator: ^2.0.1
 
   json_serializable: ^6.6.1
-  lint: ^2.0.20 
+  lint: ^2.1.2
 
   mocktail_image_network: ^1.0.0
   talawa_lint:
