add key generation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   path_provider: ^2.1.0
   permission_handler: ^10.4.3
   plugin_platform_interface: ^2.1.5
+  pointycastle: ^3.7.3
   provider: ^6.0.3
   qr_code_scanner: ^1.0.0
   qr_flutter: 4.0.0
