--- a/talawa_lint/pubspec.yaml
+++ b/talawa_lint/pubspec.yaml
@@ -1,18 +1,19 @@
 # pubspec.yaml
 name: talawa_lint
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: ">=2.12.0 <3.13.0"
 
 dev_dependencies:
   lint: ^2.0.1
 
 dependencies:
   # we will use analyzer for inspecting Dart files
-  _fe_analyzer_shared: ^60.0.0
+  _fe_analyzer_shared: ^61.0.0
   analyzer:
   analyzer_plugin:
   args:
   custom_lint:
   # custom_lint_builder will give us tools for writing lints
-  custom_lint_builder: ^0.4.0
+  custom_lint_builder: ^0.5.3
+  watcher: ^1.1.0
   
