--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   intl: ^0.18.0
   json_annotation: ^4.7.0
   mockito: ^5.3.2
+  nock: ^1.2.3
   network_image_mock: ^2.1.1
   path_provider: ^2.1.1
   permission_handler: ^11.0.0
