--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   connectivity_plus: ^4.0.2
   contained_tab_bar_view: ^0.8.0
 
+  crypto: ^3.0.3
   cupertino_icons: ^1.0.3
   currency_picker: ^2.0.16
 
@@ -58,14 +59,15 @@ dependencies:
   http: ^1.1.0
   image_cropper: ^5.0.0
 
-  intl: ^0.18.0
   image_picker: ^1.0.4
+  intl: ^0.18.0
   json_annotation: ^4.7.0
   mockito: ^5.4.2
   network_image_mock: ^2.1.1
   path_provider: ^2.1.1
   permission_handler: ^11.0.0
   plugin_platform_interface: ^2.1.6
+  pointycastle: ^3.7.3
   provider: ^6.0.3
   qr_code_scanner: ^1.0.0
   qr_flutter: 4.0.0
