--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_local_notifications: ^15.1.1
   flutter_localizations:
     sdk: flutter
+  flutter_reaction_button: ^2.0.1+2
   flutter_speed_dial: ^7.0.0
   flutter_svg: ^2.0.7
   font_awesome_flutter: ^10.5.0
