upgraded the previously downgraded packages

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,6 +41,9 @@ android {
         applicationId "com.example.talawa"
         minSdkVersion 21
 
+        compileSdkVersion 33
+        buildToolsVersion "30.0.2"
+
         targetSdkVersion 30
         multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
