--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -75,6 +75,7 @@ jobs:
   Update-Documentation:
     runs-on: ubuntu-latest
     environment: TALAWA_ENVIRONMENT
+    needs: Android-Build-and-Release
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
@@ -158,7 +159,6 @@ jobs:
     name: Testing codebase
     runs-on: ubuntu-latest
     needs: Flutter-Codebase-Check
-    # needs: Update-Documentation
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
