--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,7 @@ dependencies:
   syncfusion_flutter_datepicker: 23.1.44
   timelines: ^0.1.0
   tutorial_coach_mark: ^1.2.9
-  # uni_links: ^0.5.1
+  uni_links: ^0.5.1
   vibration: ^1.8.3
   video_player: ^2.7.2
   visibility_detector: ^0.4.0+2
