Fixed node file upload

--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,13 @@ test/fixtures/core
 # Ignoring file that are generated during talawa testing and firebase initialization
 genhtml.perl
 test_img.png
+
+
+# Node files that are generated if user uses any node command which is not required for the project
+# So these files are ignored
+node_modules/
+package.json
+package-lock.json
+yarn.lock
+npm-debug.log
+yarn-error.log
