Fixed node file upload

--- a/.gitignore
+++ b/.gitignore
@@ -246,8 +246,7 @@ genhtml.perl
 test_img.png
 
 
-# Node files that are generated if user uses any node command which is not required for the project
-# So these files are ignored
+# Ignoring Node files that are generated if user uses any node command which is not required for the project
 node_modules/
 package.json
 package-lock.json
