--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,11 +13,11 @@ name: PR Workflow
 on:
   pull_request:
     branches-ignore:
-      - 'master'
+      - "master"
 
 env:
-    CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
-   
+  CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
+
 jobs:
   Flutter-Codebase-Check:
     name: Checking codebase
@@ -27,15 +27,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           # ref: ${{ github.event.pull_request.head.sha }}
-          fetch-depth: 0  
+          fetch-depth: 0
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '12.0'          
+          distribution: "zulu" # See 'Supported distributions' for available options
+          java-version: "12.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.16.0'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.16.0"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Set default branch.
         run: git remote set-head origin --auto
         shell: bash
@@ -66,11 +66,16 @@ jobs:
           git checkout temp_branch
           pip install GitPython
           python ./.github/workflows/check_ignore.py --repository ${{github.repository}} --merge_branch_name ${{github.head_ref}}
+      - name: Compare translation files
+        run: |
+          chmod +x .github/workflows/compare_translations.py
+          python .github/workflows/compare_translations.py
+
       - name: Analysing codebase for default linting
         run: flutter analyze --no-pub
       - name: Analysing codebase for custom linting
         run: flutter pub run custom_lint
-      - name : Changed Files
+      - name: Changed Files
         id: changed-files
         uses: tj-actions/changed-files@v35
       - name: List all changed files
@@ -79,21 +84,21 @@ jobs:
             echo "$file was changed"
           done
 
-#       - name: Echo the GitHub environment for troubleshooting
-#         run: echo "$GITHUB_CONTEXT"
-#       - name: Echo the GitHub context for troubleshooting
-#         run: echo "${{ toJSON(github) }}"
-#       - name: setup python
-#         uses: actions/setup-python@v4
-#       - name: Granting permission to documentationcheck.py
-#         run: chmod +x ./.github/workflows/documentationcheck.py
-#       - name: execute py script
-#         # For more information on the GitHub context used for the "--repository" flag used by this script visit:
-#         # https://docs.github.com/en/actions/learn-github-actions/contexts
-#         run: |
-#           git branch
-#           pip install GitPython
-#           python ./.github/workflows/documentationcheck.py --repository ${{github.repository}} --merge_branch_name ${{github.ref_name}}
+  #       - name: Echo the GitHub environment for troubleshooting
+  #         run: echo "$GITHUB_CONTEXT"
+  #       - name: Echo the GitHub context for troubleshooting
+  #         run: echo "${{ toJSON(github) }}"
+  #       - name: setup python
+  #         uses: actions/setup-python@v4
+  #       - name: Granting permission to documentationcheck.py
+  #         run: chmod +x ./.github/workflows/documentationcheck.py
+  #       - name: execute py script
+  #         # For more information on the GitHub context used for the "--repository" flag used by this script visit:
+  #         # https://docs.github.com/en/actions/learn-github-actions/contexts
+  #         run: |
+  #           git branch
+  #           pip install GitPython
+  #           python ./.github/workflows/documentationcheck.py --repository ${{github.repository}} --merge_branch_name ${{github.ref_name}}
 
   Flutter-Testing:
     name: Testing codebase
@@ -103,12 +108,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '12.0'          
+          distribution: "zulu" # See 'Supported distributions' for available options
+          java-version: "12.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.16.0'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.16.0"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Running pub get to fetch dependencies
         run: flutter pub get
       - name: Codebase testing
@@ -118,13 +123,13 @@ jobs:
         with:
           verbose: true
           fail_ci_if_error: false
-          name: '${{env.CODECOV_UNIQUE_NAME}}'  
+          name: "${{env.CODECOV_UNIQUE_NAME}}"
       - name: Test acceptable level of code coverage
         uses: VeryGoodOpenSource/very_good_coverage@v2
         with:
-            path: './coverage/lcov.info'
-            min_coverage: 87.0
-            
+          path: "./coverage/lcov.info"
+          min_coverage: 87.0
+
   Android-Build:
     name: Testing build for android
     runs-on: ubuntu-latest
@@ -133,12 +138,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '12.0'          
+          distribution: "zulu" # See 'Supported distributions' for available options
+          java-version: "12.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.16.0'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.16.0"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Running pub get to fetch dependencies
         run: flutter pub get
       - name: Building for android
@@ -152,8 +157,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.16.0'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.16.0"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
           architecture: x64
       - name: Building for ios
         run: flutter build ios --release --no-codesign
