--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,7 +13,7 @@ name: PR Workflow
 on:
   pull_request:
     branches-ignore:
-      - "master"
+      - 'master'
 
 env:
   CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
@@ -30,12 +30,12 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-java@v3
         with:
-          distribution: "zulu" # See 'Supported distributions' for available options
-          java-version: "12.0"
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          java-version: '12.0'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.16.0"
-          channel: "stable" # or: 'beta', 'dev' or 'master'
+          flutter-version: '3.16.0'
+          channel: 'stable' # or: 'beta', 'dev' or 'master'
       - name: Set default branch.
         run: git remote set-head origin --auto
         shell: bash
@@ -108,12 +108,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: "zulu" # See 'Supported distributions' for available options
-          java-version: "12.0"
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          java-version: '12.0'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.16.0"
-          channel: "stable" # or: 'beta', 'dev' or 'master'
+          flutter-version: '3.16.0'
+          channel: 'stable' # or: 'beta', 'dev' or 'master'
       - name: Running pub get to fetch dependencies
         run: flutter pub get
       - name: Codebase testing
@@ -123,14 +123,12 @@ jobs:
         with:
           verbose: true
           fail_ci_if_error: false
-          name: "${{env.CODECOV_UNIQUE_NAME}}"
+          name: '${{env.CODECOV_UNIQUE_NAME}}'
       - name: Test acceptable level of code coverage
         uses: VeryGoodOpenSource/very_good_coverage@v2
         with:
-
-            path: './coverage/lcov.info'
-            min_coverage: 88.0
-            
+          path: "./coverage/lcov.info"
+          min_coverage: 88.0
 
   Android-Build:
     name: Testing build for android
