--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Compare translation files
         run: |
           chmod +x .github/workflows/compare_translations.py
-          python .github/workflows/compare_translations.py
+          python .github/workflows/compare_translations.py --directory lang
 
       - name: Analysing codebase for default linting
         run: flutter analyze --no-pub
