--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Analysing codebase for default linting
         run: flutter analyze --no-pub
       - name: Analysing codebase for custom linting
-        run: flutter pub run custom_lint
+        run: dart run custom_lint
       - name: Changed Files
         id: changed-files
         uses: tj-actions/changed-files@v41
