--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,14 +6,14 @@ analyzer:
     - test/helpers/test_helpers.mocks.dart
 
   plugins:
-    custom_lint
+    - custom_lint
 
 custom_lint:
   rules:
     - talawa_lint
 
   exclude:
-    - test/
+    - test
 
 linter:
   rules:
