--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.7
   custom_lint: 0.5.8
+  fake_async: ^1.3.1
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
