--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,11 +67,12 @@ dependencies:
   shared_preferences: ^2.2.2
   shimmer: ^3.0.0
   social_share: ^2.2.1
-  syncfusion_flutter_calendar: ^24.1.43
-  syncfusion_flutter_datepicker: 24.1.47
+  syncfusion_flutter_calendar: ^24.2.3
+  syncfusion_flutter_datepicker: 24.2.3
   timelines: ^0.1.0
   tutorial_coach_mark: ^1.2.11
   uni_links: ^0.5.1
+  uni_links_platform_interface: ^1.0.0
   url_launcher: ^6.2.4
   vibration: ^1.8.4
   video_player: ^2.8.2
@@ -80,6 +81,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.7
   custom_lint: 0.5.8
+  fake_async: ^1.3.1
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
