--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ homepage: https://github.com/PalisadoesFoundation/talawa
 
 repository: https://github.com/PalisadoesFoundation/talawa
 environment:
-  sdk: ">=2.17.0 <3.13.0"
+  sdk: ">=2.17.0 <3.19.0"
 
 dependencies:
   ############# Remove ###########
@@ -47,7 +47,7 @@ dependencies:
   get_it: ^7.6.6
   graphql_flutter: ^5.1.2
   hive: ^2.2.3
-  http: 1.1.2
+  http: ^1.2.1
   image_cropper: ^5.0.1
   image_picker: ^1.0.6
   intl: ^0.18.0
@@ -66,7 +66,7 @@ dependencies:
   shimmer: ^3.0.0
   social_share: ^2.2.1
   syncfusion_flutter_calendar: ^24.2.4
-  syncfusion_flutter_datepicker: 24.2.4
+  syncfusion_flutter_datepicker: ^24.2.8
   timelines: ^0.1.0
   tutorial_coach_mark: ^1.2.11
   uni_links: ^0.5.1
