--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,7 +13,7 @@ name: PR Workflow
 on:
   pull_request:
     branches-ignore:
-      - 'master'
+      - "master"
 
 env:
   CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
@@ -30,12 +30,12 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '12.0'
+          distribution: "zulu" # See 'Supported distributions' for available options
+          java-version: "12.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.19.0"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Set default branch.
         run: git remote set-head origin --auto
         shell: bash
@@ -92,21 +92,21 @@ jobs:
           echo "Error: Source and Target Branches are the same. Please ensure they are different."
           exit 1
 
-#       - name: Echo the GitHub environment for troubleshooting
-#         run: echo "$GITHUB_CONTEXT"
-#       - name: Echo the GitHub context for troubleshooting
-#         run: echo "${{ toJSON(github) }}"
-#       - name: setup python
-#         uses: actions/setup-python@v5
-#       - name: Granting permission to documentationcheck.py
-#         run: chmod +x ./.github/workflows/documentationcheck.py
-#       - name: execute py script
-#         # For more information on the GitHub context used for the "--repository" flag used by this script visit:
-#         # https://docs.github.com/en/actions/learn-github-actions/contexts
-#         run: |
-#           git branch
-#           pip install GitPython
-#           python ./.github/workflows/documentationcheck.py --repository ${{github.repository}} --merge_branch_name ${{github.ref_name}}
+  #       - name: Echo the GitHub environment for troubleshooting
+  #         run: echo "$GITHUB_CONTEXT"
+  #       - name: Echo the GitHub context for troubleshooting
+  #         run: echo "${{ toJSON(github) }}"
+  #       - name: setup python
+  #         uses: actions/setup-python@v5
+  #       - name: Granting permission to documentationcheck.py
+  #         run: chmod +x ./.github/workflows/documentationcheck.py
+  #       - name: execute py script
+  #         # For more information on the GitHub context used for the "--repository" flag used by this script visit:
+  #         # https://docs.github.com/en/actions/learn-github-actions/contexts
+  #         run: |
+  #           git branch
+  #           pip install GitPython
+  #           python ./.github/workflows/documentationcheck.py --repository ${{github.repository}} --merge_branch_name ${{github.ref_name}}
 
   Flutter-Testing:
     name: Testing codebase
@@ -116,12 +116,12 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '12.0'
+          distribution: "zulu" # See 'Supported distributions' for available options
+          java-version: "12.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.19.0"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Running pub get to fetch dependencies
         run: flutter pub get
       - name: Codebase testing
@@ -132,11 +132,11 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
           fail_ci_if_error: false
-          name: '${{env.CODECOV_UNIQUE_NAME}}'
+          name: "${{env.CODECOV_UNIQUE_NAME}}"
       - name: Test acceptable level of code coverage
         uses: VeryGoodOpenSource/very_good_coverage@v2
         with:
-          path: './coverage/lcov.info'
+          path: "./coverage/lcov.info"
           min_coverage: 92.0
 
   Android-Build:
@@ -147,16 +147,83 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '12.0'
+          distribution: "zulu" # See 'Supported distributions' for available options
+          java-version: "12.0"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.19.0"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
       - name: Running pub get to fetch dependencies
         run: flutter pub get
       - name: Building for android
         run: flutter build apk
+
+  Check-Unauthorized-Changes:
+    name: Checks if no unauthorized files are changed
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Get Changed Unauthorized files
+        id: changed-unauth-files
+        uses: tj-actions/changed-files@v40
+        with:
+          files: |
+            .github/**
+            env.example
+            .node-version
+            .husky/**
+            scripts/**
+            package.json
+            tsconfig.json
+            .gitignore
+            .eslintrc.json
+            .eslintignore
+            vite.config.ts
+            docker-compose.yaml
+            Dockerfile
+            CODEOWNERS
+            LICENSE
+            setup.ts
+
+      - name: List all changed unauthorized files
+        if: steps.changed-unauth-files.outputs.any_changed == 'true' || steps.changed-unauth-files.outputs.any_deleted == 'true'
+        env:
+          CHANGED_UNAUTH_FILES: ${{ steps.changed-unauth-files.outputs.all_changed_files }}
+        run: |
+          for file in ${CHANGED_UNAUTH_FILES}; do
+            echo "$file is unauthorized to change/delete"
+          done
+          exit 1
+
+  Count-Changed-Files:
+    name: Checks if number of files changed is acceptable
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v40
+
+      - name: Echo number of changed files
+        env:
+          CHANGED_FILES_COUNT: ${{ steps.changed-files.outputs.all_changed_files_count }}
+        run: |
+          echo "Number of files changed: $CHANGED_FILES_COUNT"
+
+      - name: Check if the number of changed files is less than 100
+        if: steps.changed-files.outputs.all_changed_files_count > 100
+        env:
+          CHANGED_FILES_COUNT: ${{ steps.changed-files.outputs.all_changed_files_count }}
+        run: |
+          echo "Error: Too many files (greater than 100) changed in the pull request."
+          echo "Possible issues:"
+          echo "- Contributor may be merging into an incorrect branch."
+          echo "- Source branch may be incorrect please use develop as source branch."
+          exit 1
 
   iOS-Build:
     name: Testing build for iOS
@@ -166,8 +233,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
-          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          flutter-version: "3.19.0"
+          channel: "stable" # or: 'beta', 'dev' or 'master'
           architecture: x64
       - name: Building for ios
         run: flutter build ios --release --no-codesign
