--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -210,6 +210,7 @@ jobs:
             CODEOWNERS
             LICENSE
             setup.ts
+            .coderabbit.yaml
       - name: List all changed unauthorized files
         if: steps.changed-unauth-files.outputs.any_changed == 'true' || steps.changed-unauth-files.outputs.any_deleted == 'true'
         env:
