--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
 
   # custom_lint_builder: ^0.4.0
   ################################
+  delightful_toast: ^1.1.0
   file: ^7.0.0
 
   flutter:
@@ -77,7 +78,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
 
 dev_dependencies:
-  build_runner: ^2.4.9
+  build_runner: ^2.4.11  
   custom_lint: 0.5.8
   fake_async: ^1.3.1
   flutter_test:
