--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ homepage: https://github.com/PalisadoesFoundation/talawa
 
 repository: https://github.com/PalisadoesFoundation/talawa
 environment:
-  sdk: ">=2.17.0 <=3.19.0"
+  sdk: ">=2.17.0 <3.19.0"
 
 dependencies:
   ############# Remove ###########
@@ -31,7 +31,6 @@ dependencies:
 
   # custom_lint_builder: ^0.4.0
   ################################
-  delightful_toast: ^1.1.0
   file: ^7.0.0
 
   flutter:
