--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ homepage: https://github.com/PalisadoesFoundation/talawa
 
 repository: https://github.com/PalisadoesFoundation/talawa
 environment:
-  sdk: ">=2.17.0 <3.19.0"
+  sdk: ">=2.17.0 <=3.4.4"
 
 dependencies:
   ############# Remove ###########
@@ -77,7 +77,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
 
 dev_dependencies:
-  build_runner: ^2.4.9
+  build_runner: ^2.4.11
   custom_lint: 0.5.8
   fake_async: ^1.3.1
   flutter_test:
