--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -3,16 +3,17 @@
 #
 # NOTE!
 #
-# Please read the README.md file in this directory that defines what should 
+# Please read the README.md file in this directory that defines what should
 # be placed in this file
 #
 ##############################################################################
 ##############################################################################
 
-name: Issues Workflow
+name: Issue Workflow
 on:
   issues:
-      types: ['opened']
+    types: ["opened"]
+
 jobs:
   Opened-issue-label:
     name: Adding Issue Label
@@ -23,7 +24,31 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           ignore-comments: true
           default-labels: '["unapproved"]'
-  
+
+          # Configure auto-labeling based on keywords
+          autoLabel:
+            - label: "dependencies"
+              terms:
+                - "dependabot"
+                - "dependency"
+                - "dependencies"
+              additional-labels:
+                - "security"
+                - "good first issue"
+            - label: "security"
+              terms:
+                - "security"
+              additional-labels:
+                - "good first issue"
+            - label: "ui/ux"
+              terms:
+                - "layout"
+                - "screen"
+                - "design"
+                - "figma"
+              additional-labels:
+                - "good first issue"
+
   Issue-Greeting:
     name: Greeting Message to User
     runs-on: ubuntu-latest
@@ -31,4 +56,4 @@ jobs:
       - uses: actions/first-interaction@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          issue-message: "Congratulations on making your first Issue! :confetti_ball: If you haven't already, check out our [Contributing Guidelines](https://github.com/PalisadoesFoundation/talawa/blob/develop/CONTRIBUTING.md) and [Issue Reporting Guidelines](https://github.com/PalisadoesFoundation/talawa/blob/develop/ISSUE_GUIDELINES.md) to ensure that you are following our guidelines for contributing and making issues."
+          issue-message: "Congratulations on making your first Issue! :confetti_ball: If you haven't already, check out our [Contributing Guidelines](https://github.com/PalisadoesFoundation/talawa-admin/blob/develop/CONTRIBUTING.md) and [Issue Reporting Guidelines](https://github.com/PalisadoesFoundation/talawa-admin/blob/develop/ISSUE_GUIDELINES.md) to ensure that you are following our guidelines for contributing and making issues."
