--- a/.github/workflows/authorized-changes-detection.yml
+++ b/.github/workflows/authorized-changes-detection.yml
@@ -23,6 +23,7 @@ on:
 
 jobs:
   Checking-for-unauthorized-file-changes:
+    if: ${{ github.actor != 'dependabot[bot]' }}
     name: Checking for unauthorized file changes
     runs-on: ubuntu-latest
 
