Added auto-label.json and updated issues.yml (#2601)
* added auto-label.json and updated issues.yml

* named the issues.yml to issue.yml

* improved the sync of issue.yml

--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -3,7 +3,7 @@
 #
 # NOTE!
 #
-# Please read the README.md file in this directory that defines what should 
+# Please read the README.md file in this directory that defines what should
 # be placed in this file
 #
 ##############################################################################
@@ -12,18 +12,24 @@
 name: Issues Workflow
 on:
   issues:
-      types: ['opened']
+    types: ["opened"]
 jobs:
   Opened-issue-label:
     name: Adding Issue Label
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            .github/workflows/auto-label.json5
+          sparse-checkout-cone-mode: false
+
       - uses: Renato66/auto-label@v2.3.0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           ignore-comments: true
           default-labels: '["unapproved"]'
-  
+
   Issue-Greeting:
     name: Greeting Message to User
     runs-on: ubuntu-latest
