--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,33 +1,29 @@
-name: Run Tests and Generate Coverage Report
+name: Run tests and upload coverage
 
-on:
-  push:
-    branches:
-      - main
-      - develop
-  pull_request:
+on: 
+  push
 
 jobs:
   test:
+    name: Run tests and collect coverage
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          node-version: '16'
+          fetch-depth: 0
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
 
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests with coverage
+      - name: Run tests
         run: npx jest --coverage
 
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v3
+      - name: Upload results to Codecov
+        uses: codecov/codecov-action@v5
         with:
-          name: coverage-report
-          path: coverage/
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: sayyad-asifbasha/talawa
